Disable on small devices (width < 800px) (fix #6)

--- a/static/threepanesview.css
+++ b/static/threepanesview.css
@@ -1,77 +1,80 @@
-#bigMarkAsRead
+@media (min-width: 800px)
 {
-    padding: 30px;
-}
+    #bigMarkAsRead
+    {
+        padding: 30px;
+    }
 
-#threepanesviewcontainer
-{
-    display: flex;
-    overflow: hidden;
+    #threepanesviewcontainer
+    {
+        display: flex;
+        overflow: hidden;
 
-    height: calc(100% - 48px);
-}
+        height: calc(100% - 48px);
+    }
 
-#threepanesviewcontainer > div
-{
-    box-sizing: border-box;
-    width: 50%;
-    flex-shrink: 0;
-    flex-grow: 1;
-    overflow: auto;
-    padding: 0;
-    margin: 0;
-}
+    #threepanesviewcontainer > div
+    {
+        box-sizing: border-box;
+        width: 50%;
+        flex-shrink: 0;
+        flex-grow: 1;
+        overflow: auto;
+        padding: 0;
+        margin: 0;
+    }
 
-body:not(.reader) #stream
-{
-    resize: horizontal;
-}
+    body:not(.reader) #stream
+    {
+        resize: horizontal;
+    }
 
-body:not(.reader) #stream .flux_content
-{
-    display: none;
-}
+    body:not(.reader) #stream .flux_content
+    {
+        display: none;
+    }
 
-body:not(.reader) #stream .day
-{
-    position: relative;
-}
+    body:not(.reader) #stream .day
+    {
+        position: relative;
+    }
 
-#threepanesview
-{
-    background-color: white;
-    border-left: 1px solid;
-}
+    #threepanesview
+    {
+        background-color: white;
+        border-left: 1px solid;
+    }
 
-#threepanesview > .flux
-{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    border-left: none;
-    background-color: transparent;
-}
+    #threepanesview > .flux
+    {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        border-left: none;
+        background-color: transparent;
+    }
 
-#threepanesview > .flux > .content
-{
-    min-height: 0;
-    flex-shrink: 0;
-    flex-grow: 1;
-}
+    #threepanesview > .flux > .content
+    {
+        min-height: 0;
+        flex-shrink: 0;
+        flex-grow: 1;
+    }
 
-#threepanesview > .flux > .horizontal-list
-{
-    flex-grow: 0;
-    flex-shrink: 0;
-}
+    #threepanesview > .flux > .horizontal-list
+    {
+        flex-grow: 0;
+        flex-shrink: 0;
+    }
 
-#threepanesview .dropdown-menu
-{
-    bottom: 100%;
-}
+    #threepanesview .dropdown-menu
+    {
+        bottom: 100%;
+    }
 
-#threepanesview .dropdown-menu::after
-{
-    top: auto;
-    transform: rotate(-135deg);
+    #threepanesview .dropdown-menu::after
+    {
+        top: auto;
+        transform: rotate(-135deg);
+    }
 }
